feat: Enhanced CRUD Generation with Directory Creation :tada:
