# lib/project-files/product-crud/src/routes/product.route.js
@@ -15,7 +15,7 @@ const productController = require('../controllers/product.controller');
 /* -------------------------------------------------------------------------- */
 
 // POST request - Create a new product
-router.post('/product',  fileUpload, productController.createProduct);
+router.post('/product', fileUpload, productController.createProduct);
 
 // GET request - Get all products
 router.get('/products', productController.getAllProducts);
@@ -24,9 +24,9 @@ router.get('/products', productController.getAllProducts);
 router.get('/products/:id', productController.getProductById);
 
 // PUT request - Update product by ID
-router.put('/products/:id',  fileUpload, productController.updateProductById);
+router.put('/products/:id', fileUpload, productController.updateProductById);
 
 // DELETE request - Delete product by ID
-router.delete('/products/:id',  productController.deleteProduct);
+router.delete('/products/:id', productController.deleteProduct);
 
 module.exports = router;
